sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:7: error: not found: value i
                   if (!isSmaller(i,i+1)) {
                                  ^AlgGnomeSort:7: error: not found: value i
                   if (!isSmaller(i,i+1)) {
                                    ^AlgGnomeSort:8: error: not found: value i
                     swap(i,i+1)
                          ^AlgGnomeSort:8: error: not found: value i
                     swap(i,i+1)
                            ^