sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {var posGnome = 0
                 while (posGnome < getValueCount()) {
                   if (posGnome==0) {
                     posGnome +=1
                   }
                   if (!isSmaller(i,i+1)) {
                     swap(i,i+1)
                   }
                   posGnome-=1
                 }
}